syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;
option java_package = "com.own.grpc.nacos.server.demo";
option java_outer_classname = "HelloWorldProto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}